# MedLog/backend/medlogserver/db_migrations/versions/a60dae4c25ee_automated_migration_last_hotfix_for_mmi_.py
@@ -1,0 +1,45 @@
+"""Automated migration: last hotfix for mmi drug updater 🤞
+
+Revision ID: a60dae4c25ee
+Revises: be5f522cc505
+Create Date: 2026-02-25 08:41:26.365192
+
+"""
+from typing import Sequence, Union
+
+from alembic import op
+import sqlalchemy as sa
+import sqlmodel.sql.sqltypes
+import medlogserver.model._utils
+
+
+# revision identifiers, used by Alembic.
+revision: str = 'a60dae4c25ee'
+down_revision: Union[str, Sequence[str], None] = 'be5f522cc505'
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+
+
+def upgrade():
+    bind = op.get_bind()
+    dialect = bind.dialect.name
+
+    if dialect == "postgresql":
+        # --- PostgreSQL-specific upgrade ---
+        # ### commands auto generated by Alembic - please adjust! ###
+            op.add_column('intake', sa.Column('intake_start_date_option', sa.Enum('UNKNOWN', 'AT_LEAST_12_MONTHS', name='intakestartdateoption'), nullable=True))
+            op.add_column('intake', sa.Column('intake_end_date_option', sa.Enum('UNKNOWN', 'ONGOING', name='intakeenddateoption'), nullable=True))
+            # ### end Alembic commands ###
+    elif dialect == "sqlite":
+        # --- SQLite-specific upgrade ---
+        # ### commands auto generated by Alembic - please adjust! ###
+            op.add_column('intake', sa.Column('intake_start_date_option', sa.Enum('UNKNOWN', 'AT_LEAST_12_MONTHS', name='intakestartdateoption'), nullable=True))
+            op.add_column('intake', sa.Column('intake_end_date_option', sa.Enum('UNKNOWN', 'ONGOING', name='intakeenddateoption'), nullable=True))
+            # ### end Alembic commands ###
+    else:
+        raise NotImplementedError(f"DZDMedLog only supports Postgres (and SQlite for local development). Please use another database as '{dialect}'") 
+
+
+def downgrade():
+        raise NotImplementedError(f"DZDMedLog does not support downgrading the database")
